--- a/pset7/config.json
+++ b/pset7/config.json
@@ -2,7 +2,7 @@
     "database": {
         "host": "localhost",
         "name": "pset7",
-        "username": "username",
-        "password": "password"
+        "username": "enter_in_terminal_for_lookup-username50",
+        "password": "enter_in_terminal_for_lookup-password50"
     }
 }
